--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,7 +1,15 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -10,5 +18,22 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <% if (!username) {%>
+    <form action="/login" method="POST" class="form-inline">
+      <input
+        class="form-control"
+        type="text"
+        name="username"
+        placeholder="Username"
+        style="width: 250px; margin: 1em"
+      />
+      <button type="submit" class="btn btn-outline-dark">Login</button>
+    </form>
+    <%} else{%>
+      <form action="/logout" method="POST" class="form-inline"style="gap:10px">
+        <label>Logged In As: <%= username %> User!</label>
+        <button type="submit" class="btn btn-outline-dark">Logout</button>
+      </form>
+      <%}%>
   </nav>
 </header>
