--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,20 +18,16 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-    <% if (!username) {%>
-    <form action="/login" method="POST" class="form-inline">
-      <input
-        class="form-control"
-        type="text"
-        name="username"
-        placeholder="Username"
-        style="width: 250px; margin: 1em"
-      />
-      <button type="submit" class="btn btn-outline-dark">Login</button>
+    <% if (!user) {%>
+      <form action="/login" class="form-inline">
+        <button type="submit" class="btn btn-outline-dark">Login</button>
+      </form>
+    <form class="ml-1" action="/register" class="form-inline">
+      <button type="submit" class="btn btn-outline-dark">Register</button>
     </form>
     <%} else{%>
       <form action="/logout" method="POST" class="form-inline"style="gap:10px">
-        <label>Logged In As: <%= username %> User!</label>
+        <label>Logged In As: <%= user.id %> User!</label>
         <button type="submit" class="btn btn-outline-dark">Logout</button>
       </form>
       <%}%>
