--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
@@ -8,37 +14,39 @@
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous"
     />
-    <title>URL - TinyApp Example</title>
-    <%- include('partials/_header.ejs') %>
+
+    <title>New URL - TinyApp Example</title>
   </head>
 
   <body>
-    <div class="card text-center">
-      <div class="card-header"></div>
-      <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
-        <p class="card-text">
-          Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a>
-        </p>
-      </div>
-      <div class="card-footer text-muted">
-        <div class="form-group mb-2">
-          <h5>Edit</h5>
-          <form class="form-inline" method="POST" action="/urls/<%= shortURL %>" style="margin:auto;width:fit-content;gap:10px" >
-            
-            <label for="longURL">New URL:</label>
-            <input
-              class="form-control"
-              type="text"
-              name="longURL"
-              placeholder="http://"
-              style="width: 300px"
-            />
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
+    <%- include('partials/_header') %>
+
+    <main style="margin: 1em">
+      <h3>Register for An Account!</h3>
+      <form  action="/register" method="POST">
+        <div class="form-group mb-2 mt-5">
+          <label for="longURL">Email Address</label>
+          <input
+            class="form-control"
+            type="email"
+            name="email"
+            placeholder="your email"
+            style="width: 300px; margin: 1em"
+          />
         </div>
-      </div>
-    </div>
+        <div class="form-group mb-2">
+          <label for="longURL">Password:</label>
+          <input
+            class="form-control"
+            type="password"
+            name="password"
+            placeholder="your password"
+            style="width: 300px; margin: 1em"
+          />
+        </div>
+        <button type="submit" class="btn btn-primary">Register</button>
+      </form>
+    </main>
     <!-- Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
