--- a/views/error.ejs
+++ b/views/error.ejs
@@ -14,40 +14,16 @@
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous"
     />
-    <title>TinyApp</title>
-    <%- include('partials/_header.ejs') %>
+
+    <title>New URL - TinyApp Example</title>
   </head>
+
   <body>
-    <main style="margin: 1em">
-      <h3>My URLs</h3>
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">Short URL</th>
-            <th scope="col">Long URL</th>
-            <th scope="col">Edit</th>
-            <th scope="col">Delete</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% for(let url in urls) { %>
-          <tr>
-            <td><a href="/u/<%= url %>/"><%= url %></a></td>
-            <td><%= urls[url].longURL %></td>
-            <td>
-              <form method="GET" action="/urls/<%= url %>/">
-                <button type="submit" class="btn btn-outline-primary">Edit</button>
-              </form>
-            </td>
-            <td>
-              <form method="POST" action="/urls/<%= url %>/delete">
-                <button type="submit" class="btn btn-outline-danger">Delete</button>
-              </form>
-            </td>
-          </tr>
-          <% } %>
-        </tbody>
-      </table>
+    <%- include('partials/_header') %>
+
+    <main style="margin: 1em ">
+      <h3 class="text-center mt-5"><%= errorMessage %></h3>
+      
     </main>
     <!-- Bootstrap JS -->
     <script
